<resources>
    <string name="app_name">ChinesOnline</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_button">Login</string>
    <string name="no_account_text">Don\'t have an account? </string>
    <string name="register_link">Sign up</string>
    <string name="name_label">Name</string>
    <string name="dob_label">Date of Birth</string>
    <string name="country_label">Country</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="register_button">Sign up</string>
    <string name="has_account_text">Already have an account? </string>
    <string name="back_to_login">Back to Login</string>
    <string name="error_email_not_verified">Your email hasn\'t been verified yet. Please check your inbox.</string>
    <string name="login_link">Login</string>
    <string name="success_title">SUCCESS</string>
    <string name="success_message">Registration successful! Check your inbox to activate.</string>
    <string name="redirect_message">Redirecting to login...</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="exit_content_desc">Exit</string>
    <string name="menu_content_desc">Menu</string>
    <string name="game_load_error">Error loading game</string>
    <string name="player_label">Player</string>
    <string name="xp_accumulated_label">ACCUMULATED XP</string>
    <string name="score_label">SCORE</string>
    <string name="level_label">LEVEL</string>
    <string name="question_title">What is this ideogram?</string>
    <string name="pinyin_placeholder">Type the pinyin here</string>
    <string name="submit_button">Submit</string>
    <string name="points_earned">+ %1$d pts</string>
    <string name="correct_feedback">Correct!</string>
    <string name="incorrect_feedback">Incorrect!</string>
    <string name="listen_content_desc">Listen</string>
    <string name="level_up_message">Congratulations!\nYou reached Level %1$d!</string>
    <string name="round_finished_title">Round Finished!</string>
    <string name="xp_gained_message">You earned +%1$d XP</string>
    <string name="new_round_button">New Round</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="check_email_reset">Check your email for the reset link.</string>
    <string name="password_reset_success">Password changed successfully!</string>
    <string name="welcome_message">Welcome</string>
    <string name="start_game_button">Start Game</string>
    <string name="settings_title">Settings</string>
    <string name="settings_legal_privacy">Legal and Privacy</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_account">Account</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_delete_account">Delete My Account</string>
    <string name="settings_delete_account_title">Delete Account</string>
    <string name="settings_delete_account_desc">Are you sure you want to permanently delete your account? All your progress will be lost. This action cannot be undone.</string>
    <string name="settings_delete_confirm">Delete</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_en">English</string>
    <string name="settings_language_es">Spanish</string>
    <string name="settings_language_pt">Portuguese (BR)</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="lite_blocked_feature">Feature exclusive to Premium version</string>
    <string name="settings_terms_of_use">Terms of Use</string>
</resources>
